# archie-server

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  backup_on_exit.sh  cd.sh  compose-demo.yaml  compose-no-tls.yaml  compose.yaml  create_db.sql  db-schema.sql  db_schema.sql  db_schema_bkup.sql  guestbook.html  home.html  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/ansible/: inventory.yml  playbook.yml
.github/workflows/: ci-working.yml  ci.yml  deploy.yml
ansible/: inventory.yml  playbook.yml  playbook2.yml
custom-backend/: Cargo.toml
custom-backend/src/: archie_utils.rs  db_io.rs  err_handling.rs  lb_app_io.rs  lib.rs  main.rs  types.rs  utils.rs
custom-backend/src/srv_io/: db_io.rs  lb_app_io.rs  mod.rs  vite_get.rs  vite_io.rs
custom-backend/src/utils/: err_handling.rs  init_utils.rs  mod.rs  shutdown.rs
custom-backend/tests/cli_parsing/: tls_off.rs  tls_on.rs
custom-backend/tests/integration/: client_config.rs  integ_test_guestbook.rs  integ_test_hits.rs  integ_test_lb_app.rs
custom-backend/tests/integration/db/: integ_test_guestbook.rs  integ_test_hits.rs  test_hits.rs
db-dumps/: place.holder
db-init/: privileges.sql
db-init-demo/: db_schema.sql  db_schema.sql.bkup
errors/: 404.html  405.html  415.html  500.html
lb-app/: .dockerignore  Dockerfile  healthcheck.py  lb_app.py  pytest.ini  short-list-all-attrs-no-stats.csv  short-list-no-attrs.csv  test_svr_io.py  tmp_test.py  valid-lb-attrs-strs.txt
lb-app/svr_io_lib/: misc_utils.py  parallelizer.py  senders.py
mock-backend/: backend.mock.ts
pages/: guestbook.html  home.html  lb-list-app.html
static/errors/: 403.html  404.html  405.html  415.html  500.html
static/scripts/: guestbook.js  home.js  lb-conv.js  server-types.ts
static/scripts/guestbook/: guestbook-react.tsx  index.jsx
static/scripts/home/: hit-counter.tsx  index.jsx  react-logo-msg.tsx
static/scripts/lb-app/: index.jsx  lb-app-react.tsx
static/styles/: err-style.css  guestbook-style.css  lb-app.css  std-style.css
styles/: err-style.css
test-helpers/: big-list-test.csv  db-override.yaml  db-testing-override.yaml  mini-lb-server.mock.ts  mock_backend.ts  mock_lb_app.py  short-list-all-attrs-no-stats.csv  short-list-no-attrs.csv  tls-override.yaml  validate-dump.sh
test-helpers/mock-backend/: backend.mock.ts
vitest-files/: guestbook.test.tsx  home.test.tsx  lb-app-norm.test.tsx  lb-app-svr-errs.test.tsx  vitest-setup.ts
webdriver-tests/: browsers.yaml  pytest.ini  ranked-list.csv  requirements.txt  selenium-grid.yaml  short-list-some-attrs.csv  test_01_homepage.py  test_02_guestbook.py  test_03_lb_app.py  test_homepage.py
