[package]
name = "custom-backend"
version = "0.7.2"
edition = "2021"
[[bin]]
name = "archie-server"
path = "src/main.rs"
[[test]]
name = "tls_on_default"
path = "tests/cli_parsing/tls_on.rs"
harness = false
test = false
[[test]]
name = "tls_off_switch"
path = "tests/cli_parsing/tls_off.rs"
harness = false
test = false

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
axum-extra = { version = "0.10.0", features = ["query"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = "0.4.39"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = { version = "0.3.31" }
mysql = { version = "26.0.0", features = ["chrono"] }
mysql_common = "0.34.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.217"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.2", features = [ "fs", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
