[package]
name = "custom-backend"
version = "0.9.2"
edition = "2021"
[[bin]]
name = "archie-server"
path = "src/main.rs"
[[test]]
name = "tls_on_default"
path = "tests/cli_parsing/tls_on.rs"
harness = false
test = false
[[test]]
name = "tls_off_switch"
path = "tests/cli_parsing/tls_off.rs"
harness = false
test = false
[[test]]
name = "integ_test_hits"
path = "tests/integration/integ_test_hits.rs"
harness = false
test = true
[[test]]
name = "integ_test_guestbook"
path = "tests/integration/integ_test_guestbook.rs"
harness = false
test = true
[[test]]
name = "integ_test_lb_app"
path = "tests/integration/integ_test_lb_app.rs"
harness = false
test = true

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
axum-extra = { version = "0.10.0", features = ["query"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bytes = "1.10.1"
futures = "0.3.31"
futures-util = { version = "0.3.31" }
mysql = { version = "26.0.0", features = ["chrono"] }
mysql_common = { version = "0.34.1", features = ["chrono"] }
serde = "1.0.217"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = [ "fs", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ts-rs = { version = "10.1.0", features = [ "serde-json-impl", "chrono-impl" ] }
vite-rs = "0.2.1"
vite-rs-axum-0-8 = "0.2.1"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream", "default-tls"] }
eventsource-stream = "0.2.3"
